--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         canvas.height = window.innerHeight;
 
         // Vertex shader program
-        var vsSource = \`
+        var vsSource = `
             attribute vec4 aVertexPosition;
             attribute vec4 aVertexColor;
             uniform mat4 uModelViewMatrix;
@@ -41,15 +41,15 @@
                 gl_Position = uProjectionMatrix * uModelViewMatrix * aVertexPosition;
                 vColor = aVertexColor;
             }
-        \`;
+        `;
 
         // Fragment shader program
-        var fsSource = \`
+        var fsSource = `
             varying lowp vec4 vColor;
             void main(void) {
                 gl_FragColor = vColor;
             }
-        \`;
+        `;
 
         // Initialize shader program
         function initShaderProgram(gl, vsSource, fsSource) {
@@ -291,9 +291,19 @@
                 var f = 1.0 / Math.tan(fovy / 2);
                 var nf = 1 / (near - far);
                 out[0] = f / aspect;
+                out[1] = 0;
+                out[2] = 0;
+                out[3] = 0;
+                out[4] = 0;
                 out[5] = f;
+                out[6] = 0;
+                out[7] = 0;
+                out[8] = 0;
+                out[9] = 0;
                 out[10] = (far + near) * nf;
                 out[11] = -1;
+                out[12] = 0;
+                out[13] = 0;
                 out[14] = (2 * far * near) * nf;
                 out[15] = 0;
             },
@@ -313,25 +323,36 @@
                 var c = Math.cos(rad);
                 var t = 1 - c;
 
-                var a00 = a[0], a01 = a[1], a02 = a[2];
-                var a10 = a[4], a11 = a[5], a12 = a[6];
-                var a20 = a[8], a21 = a[9], a22 = a[10];
+                var a00 = a[0], a01 = a[1], a02 = a[2], a03 = a[3];
+                var a10 = a[4], a11 = a[5], a12 = a[6], a13 = a[7];
+                var a20 = a[8], a21 = a[9], a22 = a[10], a23 = a[11];
 
+                // Construct the elements of the rotation matrix
                 var b00 = x * x * t + c,     b01 = y * x * t + z * s, b02 = z * x * t - y * s;
                 var b10 = x * y * t - z * s, b11 = y * y * t + c,     b12 = z * y * t + x * s;
                 var b20 = x * z * t + y * s, b21 = y * z * t - x * s, b22 = z * z * t + c;
 
+                // Perform rotation-specific matrix multiplication
                 out[0] = a00 * b00 + a10 * b01 + a20 * b02;
                 out[1] = a01 * b00 + a11 * b01 + a21 * b02;
                 out[2] = a02 * b00 + a12 * b01 + a22 * b02;
+                out[3] = a03 * b00 + a13 * b01 + a23 * b02;
                 out[4] = a00 * b10 + a10 * b11 + a20 * b12;
                 out[5] = a01 * b10 + a11 * b11 + a21 * b12;
                 out[6] = a02 * b10 + a12 * b11 + a22 * b12;
+                out[7] = a03 * b10 + a13 * b11 + a23 * b12;
                 out[8] = a00 * b20 + a10 * b21 + a20 * b22;
                 out[9] = a01 * b20 + a11 * b21 + a21 * b22;
                 out[10] = a02 * b20 + a12 * b21 + a22 * b22;
+                out[11] = a03 * b20 + a13 * b21 + a23 * b22;
+
+                out[12] = a[12];
+                out[13] = a[13];
+                out[14] = a[14];
+                out[15] = a[15];
             },
         };
     </script>
 </body>
 </html>
+
